tests/ui/attributes/issue-105594-invalid-attr-validation.stderr
error: `#[track_caller]` attribute cannot be used on statics
  --> $DIR/issue-105594-invalid-attr-validation.rs:6:1
   |
LL | #[track_caller]
   | ^^^^^^^^^^^^^^^
   |
help: `#[track_caller]` can be applied to functions
  --> $DIR/issue-105594-invalid-attr-validation.rs:6:1
   |
LL | #[track_caller]
   | ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

